--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,6 +20,21 @@ jobs:
           name: Build WAR
           command: mvn clean package
 
+      - run:
+          name: Creating Dummy Artifacts
+          working_directory: /tmp
+          command: |
+            echo "my artifact file" > /tmp/artifact-1;
+            mkdir /tmp/artifacts;
+            echo "my artifact files in a dir" > /tmp/artifacts/artifact-2;
+
+      - store_artifacts:
+          path: /tmp/artifact-1
+          destination: artifact-file
+
+      - store_artifacts:
+          path: /tmp/artifacts
+
 workflows:
   version: 2
   build_war:
