Update config.yml -9

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,12 +21,16 @@ jobs:
           command: mvn clean package
 
       - run:
+          name: Rename WAR with Build Number
+          command: mv target/java-hello-world.war target/java-hello-world/${CIRCLE_BUILD_NUM}.war
+
+      - run:
           name: List all files in target directory
           command: find target
 
       - store_artifacts:
-          path: target/java-hello-world.war
-          destination: java-hello-world.war
+          path: target/java-hello-world/${CIRCLE_BUILD_NUM}.war
+          destination: war-file
 
 workflows:
   version: 2
