--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,7 +26,7 @@ jobs:
 
       - store_artifacts:
           path: target/java-hello-world/${CIRCLE_BUILD_NUM}.war
-          destination: java-hello-world.war
+          destination: java-hello-world/${CIRCLE_BUILD_NUM}.war
 
 workflows:
   version: 2
