--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,12 +21,22 @@ jobs:
           command: mvn clean package
 
       - run:
+          name: Rename WAR with Build Number
+          command: |
+            if [ -f target/java-hello-world.war ]; then
+              mv target/java-hello-world.war target/java-hello-world-${CIRCLE_BUILD_NUM}.war;
+            else
+              echo "WAR file not found!";
+              exit 1;
+            fi
+
+      - run:
           name: List all files in target directory
           command: find target
 
       - store_artifacts:
-          path: target/java-hello-world.war
-          destination: java-hello-world.war
+          path: target/java-hello-world-${CIRCLE_BUILD_NUM}.war
+          destination: war-file
 
 workflows:
   version: 2
