--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,14 +23,24 @@ jobs:
       - run:
           name: Rename WAR with Build Number
           command: |
-            mv target/java-hello-world.war target/java-hello-world/${CIRCLE_BUILD_NUM}.war
+            if [ -f target/java-hello-world.war ]; then
+              mv target/java-hello-world.war target/${CIRCLE_BUILD_NUM}.war;
+              echo "WAR file renamed to ${CIRCLE_BUILD_NUM}.war";
+            else
+              echo "WAR file not found!";
+              exit 1;
+            fi
 
       - run:
-          name: List all files in target directory
+          name: List all files in target directory after renaming
           command: find target
 
+      - run:
+          name: Print artifact path
+          command: echo "Artifact path: target/${CIRCLE_BUILD_NUM}.war"
+
       - store_artifacts:
-          path: target/java-hello-world/${CIRCLE_BUILD_NUM}.war
+          path: target/${CIRCLE_BUILD_NUM}.war
           destination: java-hello-world/${CIRCLE_BUILD_NUM}.war
 
 workflows:
