--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,35 +1,35 @@
 version: 2.1
 
 executors:
-  maven:
+  gradle:
     docker:
       - image: circleci/openjdk:11-jdk
     working_directory: ~/main
 
 jobs:
   build:
-    executor: maven
+    executor: gradle
     steps:
       - checkout
 
       - run:
           name: Download and cache dependencies
-          command: mvn dependency:go-offline
+          command: ./gradlew build --no-daemon
 
       - run:
-          name: Build WAR
-          command: mvn clean package
+          name: Build JAR
+          command: ./gradlew build --no-daemon
 
       - run:
-          name: List all files in target directory
-          command: find target
+          name: List all files in build directory
+          command: find build
 
       - store_artifacts:
-          path: target/java-hello-world.war
-          destination: java-hello-world.war
+          path: build/libs/java-hello-world.jar
+          destination: java-hello-world.jar
 
 workflows:
   version: 2
-  build_war:
+  build_jar:
     jobs:
       - build
